# py_c_interface_shim

./: MANIFEST.in  README.md  package_versions.txt  pyproject.toml  setup.py
c_project/: Makefile
c_project/src/: c_interface_consumer.c  c_interface_consumer.h  c_number_interface.h
src/: main.py
src/py_package/: __init__.py  py_c_num_interface_shim.c  py_number_impl.py
